--- a/style.css
+++ b/style.css
@@ -1,1 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto Mono", monospace;
+    background-image: url("/background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+  background-color: white;
+  padding: 32px 84px;
+  border-radius: 24px;
+  filter: drop-shadow(0px 0px 50px black);
+  width: 350px;
+  text-align: center;
+}
+
+h1 {
+    color: black;
+}
+
+button {
+    background-color: #5A3DFF;
+    color: white;
+    border: 1px solid #7c64ff;
+    border-radius: 4em;
+    padding: 10px 48px;
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+    transition: 450ms;
+}
+
+button:hover {
+    background-color: #462ae6;
+    scale: 1.05;
+    transition: 450ms;
+}
+
+.date-picker, .task-date {
+    width: 90%;
+    padding: 10px;
+    border-radius: 4em;
+    border: 1px solid #ccc;
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.task-screen, .add-task-screen {
+    display: none;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 10px;
+}
+
+li {
+    background-color: white;
+    padding: 10px;
+    border-radius: 4em;
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li .delete {
+    background-color: #ff3d67;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+li .delete:hover {
+    background-color: #e92b54;
+}
+
+@media (orientation: portait) and (min-witdh: "450px") {
+    .container {
+        width: 90%;
+        max-width: 300px;
+        padding: 25px;
+    }
+
+    h1 {
+        font-size: ;
+    }
+
+    button, .date-picker, .task-input {
+        width: 90%;
+        padding: 10px;
+    }
+
+
+    ul {
+        margin-top: 15px;
+    }
+
+
+    li {
+        padding: 10px;
+    }
+
+
+    li .delete {
+        width: 30%;
+    }
+}
